feat: update site content

--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
     <h1>DevSecOps</h1>
     <h2>Infraestrutura Web com Monitoramento Automatizado</h2>
 
-    <div class="etapas">
+    <div class="steps">
       <section>
         <h3>Etapa 1: Configuração do Ambiente</h3>
         <p>Preparação de um ambiente local Linux com sistema próprio ou WSL.</p>
@@ -36,11 +36,6 @@
 
       <section>
         <h3>Etapa 4: Testes e Documentação</h3>
-      </section>
-
-      <section>
-        <h3>Desafio Bônus</h3>
-        <p>Automatização completa via <strong>User Data</strong> para provisionamento inicial.</p>
       </section>
     </div>
   </div>
